# Autonomous-Developer-Workspace

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CICD_DOCKER_README.md  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  README.md  STARTUP_GUIDE.md  docker-compose.yml  fix_null_bytes.py  frontend.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  start.bat  test_api.py  tsconfig.json
ai-services/agents/: agent_dispatcher.py  agent_llm.py  agent_registry.py  agent_service.py  agent_types.py  langgraph_pipeline.py  project_orchestrator.py
ai-services/agents/runners/: code_generator.py  code_reviewer.py  (+3 more)
apps/server/: .env.example  .eslintrc.js  package.json  tsconfig.json
apps/server-py/: .dockerignore  .env.example  Dockerfile  README.md  requirements.txt  run.py  start.bat
apps/web/: .env.example  .eslintrc.js  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
backend/: main.py
backend/auth/: auth.py
backend/core/: config.py  database.py  errors.py  groq_client.py  logger.py
backend/lib/: mcp_server.py
backend/orchestrator/: __init__.py  agent_registry.py  git_integration.py  memory.py  orchestrator_core.py  planner_agent.py  sandbox.py
backend/realtime/: emitter.py  events.py  server.py
backend/task_queue/: __init__.py  queue.py  worker.py
database/: firestore.indexes.json
frontend/: .eslintrc.js  next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json
(+234 files in other folders)
