[project]
name = "autonomous-developer-workspace"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-socketio>=5.11.0",
    "python-engineio>=4.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "firebase-admin>=6.5.0",
    "groq>=0.11.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "mcp[cli]>=1.0.0",
    "python-dateutil>=2.9.0",
]
